# glowing-engine

./: .gitignore  README.md  app.py  pyproject.toml  vn.py
.chainlit/: config.toml
config/: training.yaml
database/: stocks.db
notebooks/: setup_db.ipynb  test_vanna.ipynb
