[project]
name = "glowing-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
    "chromadb>=1.0.12",
    "ipywidgets>=8.1.7",
    "kaleido==0.2.1",
    "llama-index>=0.12.41",
    "llama-index-llms-azure-openai>=0.3.4",
    "openai>=1.85.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.67.1",
    "vanna>=0.7.9",
    "yfinance>=0.2.62",
]
